// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match snapshot 1`] = `
<header
  className="sc-bwzfXH kGqwtf"
>
  <h1
    className="sc-bdVaJa bUEgTO"
  >
    My Movies
  </h1>
</header>
`;

exports[`Main component should match empty snapshot 1`] = `
<main>
  <div
    className="sc-htpNat VPkom"
  >
    Movies now playing
  </div>
  <div>
    <label>
      Choose a minimum rating: 
    </label>
    <select
      className="sc-bxivhb jUndbY"
      onChange={[Function]}
      value={0}
    >
      <option
        value="0"
      >
        none
      </option>
      <option
        value={5}
      >
        5
      </option>
      <option
        value={5.5}
      >
        5.5
      </option>
      <option
        value={6}
      >
        6
      </option>
      <option
        value={6.5}
      >
        6.5
      </option>
      <option
        value={7}
      >
        7
      </option>
      <option
        value={7.5}
      >
        7.5
      </option>
      <option
        value={8}
      >
        8
      </option>
      <option
        value={8.5}
      >
        8.5
      </option>
      <option
        value={9}
      >
        9
      </option>
      <option
        value={9.5}
      >
        9.5
      </option>
      <option
        value={10}
      >
        10
      </option>
    </select>
  </div>
  <div
    className="sc-EHOje dgfsxR"
  />
  <footer
    className="sc-bZQynM jTTzqW"
  >
    <img
      alt="tmdb logo"
      className="sc-gzVnrw bylXzw"
      src="tmdb-logo.png"
    />
    <div
      className="sc-htoDjs hXIZpn"
    >
      This product uses the TMDb API but is not endorsed or certified by TMDb.
    </div>
  </footer>
</main>
`;

exports[`Main component should match snapshot with min rating 1`] = `
<main>
  <div
    className="sc-jzJRlG gMGYdn"
  >
    Movies now playing
  </div>
  <div>
    <label>
      Choose a minimum rating: 
    </label>
    <select
      className="sc-cSHVUG jjSnWe"
      onChange={[Function]}
      value={8}
    >
      <option
        value="0"
      >
        none
      </option>
      <option
        value={5}
      >
        5
      </option>
      <option
        value={5.5}
      >
        5.5
      </option>
      <option
        value={6}
      >
        6
      </option>
      <option
        value={6.5}
      >
        6.5
      </option>
      <option
        value={7}
      >
        7
      </option>
      <option
        value={7.5}
      >
        7.5
      </option>
      <option
        value={8}
      >
        8
      </option>
      <option
        value={8.5}
      >
        8.5
      </option>
      <option
        value={9}
      >
        9
      </option>
      <option
        value={9.5}
      >
        9.5
      </option>
      <option
        value={10}
      >
        10
      </option>
    </select>
  </div>
  <div
    className="sc-chPdSV ifgDvI"
  >
    <div
      className="MovieGridItem sc-kAzzGY bwFQux"
    >
      <img
        alt="The Greatest Showman"
        src="http://image.tmdb.org/t/p/w200//dfhztJRiElqmYW4kpvjYe1gENsD.jpg"
        width="200"
      />
      <h3>
        The Greatest Showman
      </h3>
      <div>
        Rating: 
        8
      </div>
      <div>
        Review Count: 
        1595
      </div>
    </div>
    <div
      className="MovieGridItem sc-kAzzGY bwFQux"
    >
      <img
        alt="Three Billboards Outside Ebbing, Missouri"
        src="http://image.tmdb.org/t/p/w200//vgvw6w1CtcFkuXXn004S5wQsHRl.jpg"
        width="200"
      />
      <h3>
        Three Billboards Outside Ebbing, Missouri
      </h3>
      <div>
        Rating: 
        8.2
      </div>
      <div>
        Review Count: 
        2301
      </div>
    </div>
    <div
      className="MovieGridItem sc-kAzzGY bwFQux"
    >
      <img
        alt="Wonder"
        src="http://image.tmdb.org/t/p/w200//ouYgAatYH4JzIThj6FI3UYf31RI.jpg"
        width="200"
      />
      <h3>
        Wonder
      </h3>
      <div>
        Rating: 
        8.1
      </div>
      <div>
        Review Count: 
        1499
      </div>
    </div>
    <div
      className="MovieGridItem sc-kAzzGY bwFQux"
    >
      <img
        alt="Call Me by Your Name"
        src="http://image.tmdb.org/t/p/w200//nPTjj6ZfBXXBwOhd7iUy6tyuKWt.jpg"
        width="200"
      />
      <h3>
        Call Me by Your Name
      </h3>
      <div>
        Rating: 
        8.3
      </div>
      <div>
        Review Count: 
        1769
      </div>
    </div>
    <div
      className="MovieGridItem sc-kAzzGY bwFQux"
    >
      <img
        alt="The Lion King"
        src="http://image.tmdb.org/t/p/w200//bKPtXn9n4M4s8vvZrbw40mYsefB.jpg"
        width="200"
      />
      <h3>
        The Lion King
      </h3>
      <div>
        Rating: 
        8.1
      </div>
      <div>
        Review Count: 
        7007
      </div>
    </div>
  </div>
  <footer
    className="sc-kgoBCf bYtNgI"
  >
    <img
      alt="tmdb logo"
      className="sc-kGXeez bWwPEQ"
      src="tmdb-logo.png"
    />
    <div
      className="sc-kpOJdX bsNBXO"
    >
      This product uses the TMDb API but is not endorsed or certified by TMDb.
    </div>
  </footer>
</main>
`;

exports[`Main component should match snapshot with movie data 1`] = `
<main>
  <div
    className="sc-dnqmqq ewDSjv"
  >
    Movies now playing
  </div>
  <div>
    <label>
      Choose a minimum rating: 
    </label>
    <select
      className="sc-iwsKbI gwNExv"
      onChange={[Function]}
      value={0}
    >
      <option
        value="0"
      >
        none
      </option>
      <option
        value={5}
      >
        5
      </option>
      <option
        value={5.5}
      >
        5.5
      </option>
      <option
        value={6}
      >
        6
      </option>
      <option
        value={6.5}
      >
        6.5
      </option>
      <option
        value={7}
      >
        7
      </option>
      <option
        value={7.5}
      >
        7.5
      </option>
      <option
        value={8}
      >
        8
      </option>
      <option
        value={8.5}
      >
        8.5
      </option>
      <option
        value={9}
      >
        9
      </option>
      <option
        value={9.5}
      >
        9.5
      </option>
      <option
        value={10}
      >
        10
      </option>
    </select>
  </div>
  <div
    className="sc-gqjmRU etoXPi"
  >
    <div
      className="MovieGridItem sc-gZMcBi imdaMP"
    >
      <img
        alt="Fifty Shades Freed"
        src="http://image.tmdb.org/t/p/w200//jjPJ4s3DWZZvI4vw8Xfi4Vqa1Q8.jpg"
        width="200"
      />
      <h3>
        Fifty Shades Freed
      </h3>
      <div>
        Rating: 
        6.1
      </div>
      <div>
        Review Count: 
        1097
      </div>
    </div>
    <div
      className="MovieGridItem sc-gZMcBi imdaMP"
    >
      <img
        alt="Black Panther"
        src="http://image.tmdb.org/t/p/w200//uxzzxijgPIY7slzFvMotPv8wjKA.jpg"
        width="200"
      />
      <h3>
        Black Panther
      </h3>
      <div>
        Rating: 
        7.4
      </div>
      <div>
        Review Count: 
        3477
      </div>
    </div>
    <div
      className="MovieGridItem sc-gZMcBi imdaMP"
    >
      <img
        alt="Coco"
        src="http://image.tmdb.org/t/p/w200//eKi8dIrr8voobbaGzDpe8w0PVbC.jpg"
        width="200"
      />
      <h3>
        Coco
      </h3>
      <div>
        Rating: 
        7.8
      </div>
      <div>
        Review Count: 
        3404
      </div>
    </div>
    <div
      className="MovieGridItem sc-gZMcBi imdaMP"
    >
      <img
        alt="Tomb Raider"
        src="http://image.tmdb.org/t/p/w200//ePyN2nX9t8SOl70eRW47Q29zUFO.jpg"
        width="200"
      />
      <h3>
        Tomb Raider
      </h3>
      <div>
        Rating: 
        6.1
      </div>
      <div>
        Review Count: 
        588
      </div>
    </div>
    <div
      className="MovieGridItem sc-gZMcBi imdaMP"
    >
      <img
        alt="Meet Me In St. Gallen"
        src="http://image.tmdb.org/t/p/w200//uGntNjUx6YAzbVy7RDgxWnWsdet.jpg"
        width="200"
      />
      <h3>
        Meet Me In St. Gallen
      </h3>
      <div>
        Rating: 
        6
      </div>
      <div>
        Review Count: 
        9
      </div>
    </div>
    <div
      className="MovieGridItem sc-gZMcBi imdaMP"
    >
      <img
        alt="Annihilation"
        src="http://image.tmdb.org/t/p/w200//d3qcpfNwbAMCNqWDHzPQsUYiUgS.jpg"
        width="200"
      />
      <h3>
        Annihilation
      </h3>
      <div>
        Rating: 
        6.4
      </div>
      <div>
        Review Count: 
        1023
      </div>
    </div>
    <div
      className="MovieGridItem sc-gZMcBi imdaMP"
    >
      <img
        alt="The Shape of Water"
        src="http://image.tmdb.org/t/p/w200//k4FwHlMhuRR5BISY2Gm2QZHlH5Q.jpg"
        width="200"
      />
      <h3>
        The Shape of Water
      </h3>
      <div>
        Rating: 
        7.3
      </div>
      <div>
        Review Count: 
        2963
      </div>
    </div>
    <div
      className="MovieGridItem sc-gZMcBi imdaMP"
    >
      <img
        alt="Olaf's Frozen Adventure"
        src="http://image.tmdb.org/t/p/w200//As8WTtxXs9e3cBit3ztTf7zoRmm.jpg"
        width="200"
      />
      <h3>
        Olaf's Frozen Adventure
      </h3>
      <div>
        Rating: 
        5.9
      </div>
      <div>
        Review Count: 
        541
      </div>
    </div>
    <div
      className="MovieGridItem sc-gZMcBi imdaMP"
    >
      <img
        alt="Pacific Rim: Uprising"
        src="http://image.tmdb.org/t/p/w200//v5HlmJK9bdeHxN2QhaFP1ivjX3U.jpg"
        width="200"
      />
      <h3>
        Pacific Rim: Uprising
      </h3>
      <div>
        Rating: 
        6.3
      </div>
      <div>
        Review Count: 
        159
      </div>
    </div>
    <div
      className="MovieGridItem sc-gZMcBi imdaMP"
    >
      <img
        alt="Pitch Perfect 3"
        src="http://image.tmdb.org/t/p/w200//fchHLsLjFvzAFSQykiMwdF1051.jpg"
        width="200"
      />
      <h3>
        Pitch Perfect 3
      </h3>
      <div>
        Rating: 
        6.4
      </div>
      <div>
        Review Count: 
        677
      </div>
    </div>
    <div
      className="MovieGridItem sc-gZMcBi imdaMP"
    >
      <img
        alt="The Greatest Showman"
        src="http://image.tmdb.org/t/p/w200//dfhztJRiElqmYW4kpvjYe1gENsD.jpg"
        width="200"
      />
      <h3>
        The Greatest Showman
      </h3>
      <div>
        Rating: 
        8
      </div>
      <div>
        Review Count: 
        1595
      </div>
    </div>
    <div
      className="MovieGridItem sc-gZMcBi imdaMP"
    >
      <img
        alt="Three Billboards Outside Ebbing, Missouri"
        src="http://image.tmdb.org/t/p/w200//vgvw6w1CtcFkuXXn004S5wQsHRl.jpg"
        width="200"
      />
      <h3>
        Three Billboards Outside Ebbing, Missouri
      </h3>
      <div>
        Rating: 
        8.2
      </div>
      <div>
        Review Count: 
        2301
      </div>
    </div>
    <div
      className="MovieGridItem sc-gZMcBi imdaMP"
    >
      <img
        alt="Downsizing"
        src="http://image.tmdb.org/t/p/w200//uLlmtN33rMuimRq6bu0OoNzCGGs.jpg"
        width="200"
      />
      <h3>
        Downsizing
      </h3>
      <div>
        Rating: 
        5.1
      </div>
      <div>
        Review Count: 
        686
      </div>
    </div>
    <div
      className="MovieGridItem sc-gZMcBi imdaMP"
    >
      <img
        alt="Wonder"
        src="http://image.tmdb.org/t/p/w200//ouYgAatYH4JzIThj6FI3UYf31RI.jpg"
        width="200"
      />
      <h3>
        Wonder
      </h3>
      <div>
        Rating: 
        8.1
      </div>
      <div>
        Review Count: 
        1499
      </div>
    </div>
    <div
      className="MovieGridItem sc-gZMcBi imdaMP"
    >
      <img
        alt="I Kill Giants"
        src="http://image.tmdb.org/t/p/w200//zNrBAF5YvzDACMHvxwHpsiAOt2I.jpg"
        width="200"
      />
      <h3>
        I Kill Giants
      </h3>
      <div>
        Rating: 
        6.2
      </div>
      <div>
        Review Count: 
        28
      </div>
    </div>
    <div
      className="MovieGridItem sc-gZMcBi imdaMP"
    >
      <img
        alt="Maze Runner: The Death Cure"
        src="http://image.tmdb.org/t/p/w200//7GgZ6DGezkh3szFdvskH5XD4V0t.jpg"
        width="200"
      />
      <h3>
        Maze Runner: The Death Cure
      </h3>
      <div>
        Rating: 
        7.3
      </div>
      <div>
        Review Count: 
        1057
      </div>
    </div>
    <div
      className="MovieGridItem sc-gZMcBi imdaMP"
    >
      <img
        alt="The Monkey King 3: Kingdom of Women"
        src="http://image.tmdb.org/t/p/w200//zMYnxPIkUVaRIuTpS77B8hLGkBB.jpg"
        width="200"
      />
      <h3>
        The Monkey King 3: Kingdom of Women
      </h3>
      <div>
        Rating: 
        3
      </div>
      <div>
        Review Count: 
        3
      </div>
    </div>
    <div
      className="MovieGridItem sc-gZMcBi imdaMP"
    >
      <img
        alt="Red Sparrow"
        src="http://image.tmdb.org/t/p/w200//fyufzd2S1lLxMxkTHTnmr6VJfe5.jpg"
        width="200"
      />
      <h3>
        Red Sparrow
      </h3>
      <div>
        Rating: 
        6.3
      </div>
      <div>
        Review Count: 
        461
      </div>
    </div>
    <div
      className="MovieGridItem sc-gZMcBi imdaMP"
    >
      <img
        alt="Call Me by Your Name"
        src="http://image.tmdb.org/t/p/w200//nPTjj6ZfBXXBwOhd7iUy6tyuKWt.jpg"
        width="200"
      />
      <h3>
        Call Me by Your Name
      </h3>
      <div>
        Rating: 
        8.3
      </div>
      <div>
        Review Count: 
        1769
      </div>
    </div>
    <div
      className="MovieGridItem sc-gZMcBi imdaMP"
    >
      <img
        alt="The Lion King"
        src="http://image.tmdb.org/t/p/w200//bKPtXn9n4M4s8vvZrbw40mYsefB.jpg"
        width="200"
      />
      <h3>
        The Lion King
      </h3>
      <div>
        Rating: 
        8.1
      </div>
      <div>
        Review Count: 
        7007
      </div>
    </div>
  </div>
  <footer
    className="sc-VigVT jFONBY"
  >
    <img
      alt="tmdb logo"
      className="sc-jTzLTM bCMSoG"
      src="tmdb-logo.png"
    />
    <div
      className="sc-fjdhpX hfzrgR"
    >
      This product uses the TMDb API but is not endorsed or certified by TMDb.
    </div>
  </footer>
</main>
`;
